--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -2,15 +2,14 @@
   <table class="table table-striped">
   <thead>
   <tr>
-    <th>name</th>
-    <th>designation</th>
+    <th>firstName</th>
+    <th>lastName</th>
     </tr>
   </thead>
   <tbody>
       <tr *ngFor="let employee of employees">
-          <td>{{employee.name}}</td>
-          <td>{{employee.designation}}</td>
-          <td><button class="btn btn-danger" (click)="deleteEmployee(employee)"> Delete Employee</button></td>
+          <td>{{employee.firstName}}</td>
+          <td>{{employee.lastName}}</td>
           </tr>
   </tbody>
     </table>
