--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -2,18 +2,18 @@
   <h2 class="text-center">Add Employee</h2>
   <form>
     <div class="form-group">
-      <label for="name">Name:</label>
-      <input type="name" [(ngModel)]="user.name" placeholder="Name" name="name" class="form-control" id="name">
+      <label for="name">First Name</label>
+      <input type="name" [(ngModel)]="user.firstName" placeholder="First Name" name="name" class="form-control" id="name">
     </div>
   
     <div class="form-group">
-      <label for="designation">Designation:</label>
-      <input [(ngModel)]="user.designation" placeholder="Designation" name="designation" class="form-control" id="designation">
+      <label for="name">Last Name</label>
+      <input [(ngModel)]="user.lastName" placeholder="Last Name" name="designation" class="form-control" id="designation">
     </div>
   
     <div class="form-group">
-      <label for="empId">Employee Id</label>
-      <input [(ngModel)]="user.empId" placeholder="Employee Id" name="Employee Id" class="form-control" id="employeeid">
+      <label for="name">Email Id</label>
+      <input [(ngModel)]="user.emailId" placeholder="Email Id" name="Employee Id" class="form-control" id="employeeid">
     </div>
   
     <button class="btn btn-success" (click)="createEmployee()">Create</button>
