--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-6">
-  <h2 class="text-center">Add Employee</h2>
+  <h2 class="text-center">Add Teacher</h2>
   <form>
     <div class="form-group">
       <label for="name">First Name</label>
