--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,10 +3,10 @@
   <ul class="navbar-nav">
     <li><a *ngIf="loginService.isUserLoggedIn()" routerLink="/" class="nav-link">View Employees</a></li>
     <li><a *ngIf="loginService.isUserLoggedIn()" routerLink="/addemployee" class="nav-link">Add New Employee</a></li>
+    <li><a *ngIf="loginService.isUserLoggedIn()" routerLink="/add-student" class="nav-link">Add New Student</a></li>
+    <li><a *ngIf="loginService.isUserLoggedIn()" routerLink="/add-event" class="nav-link">Add New Event</a></li>
     <li><a *ngIf="!loginService.isUserLoggedIn()" routerLink="/login" class="nav-link">Login</a></li>
     <li><a *ngIf="loginService.isUserLoggedIn()" routerLink="/logout" class="nav-link">LogOut</a></li>
   </ul>
-  
   </nav>
-  
   </header>
